<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivSongImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:src="@mipmap/ic_app_icon"
        app:shapeAppearanceOverlay="@style/Curved" />

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@id/tvSongDuration"
        android:layout_toEndOf="@id/ivSongImage"
        android:text="@string/tv_song_name"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvAlbum"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/tvSongDuration"
        android:layout_toEndOf="@id/ivSongImage"
        android:text="@string/tvSongAlbum" />
    <TextView
        android:id="@+id/tvSongDuration"
        android:layout_width="50dp"
        android:text="@string/tv_start"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:layout_height="50dp"/>

</RelativeLayout>