<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_shuffle"
                android:layout_weight="1"
                android:contentDescription="@string/btn_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_shuffle"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableTop="@drawable/ic_shuffle_icon"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                android:id="@+id/btn_favourite"
                android:layout_weight="1"
                android:contentDescription="@string/btn_favourite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_favourite"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:drawableTop="@drawable/ic_favourite_icon"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                android:id="@+id/btn_playlist"
                android:layout_weight="1"
                android:contentDescription="@string/btn_playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_playlist"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:drawableTop="@drawable/ic_play_list_icon"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvTotalSongs"
            android:text="@string/tv_total_songs"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTotalSongs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_height="match_parent"/>


</androidx.drawerlayout.widget.DrawerLayout>